Refactor condition expression builder to accept nested conditions